tests/sksl/errors/InvalidUnary.glsl
### Compilation failed:

error: 3: '++' cannot operate on 'float4x4'
error: 4: '--' cannot operate on 'float3'
error: 5: '++' cannot operate on 'float4x4'
error: 6: '--' cannot operate on 'float3'
error: 7: '!' cannot operate on 'int'
error: 8: '+' cannot operate on 'Foo'
error: 9: '-' cannot operate on 'Foo'
7 errors
